--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <base href="/">
         <meta charset="UTF-8">  
+        <meta name="viewport" content="width=device-width">
         <title>Sandy's Chat App</title>
+        <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="/vendor/font-awesome/css/fontawesome.min.css" />
+        <link rel="stylesheet" href="/css/chatApp.css" />
     </head>
-    <body>
-        <h1>Hello World</h1>
+    <body ng-app='chatApp'>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                  
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                </div>
+            </nav>
+        <div class="container">
+            <div ng-view></div>
+        </div>
+
         <script src="/socket.io/socket.io.js"></script>
+
+        <script src="/vendor/angular/angular.min.js"></script>
+        <script src="/vendor/jquery/dist/jquery.min.js"></script>
+        <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+
         <script src="/js/chatApp.js"></script>
     </body>
 </html>
